NetCDF4 python requires numpy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -222,6 +222,7 @@ else()
   include(szip)
   include(visitbridge)
   include(zlib)
+  include(netcdf4)
   include(netcdf4python)
   if(CMAKE_Fortran_COMPILER)
     # both of these packages require a Fortran compiler to build so we
@@ -262,6 +263,8 @@ else()
 endif()
 
 process_dependencies()
+
+message("Aashish...............$ENV{CPPFLAGS}")
 
 #-------------------------------------------------------------------------
 # Some sanity checks.
